# template

./: CMakeLists.txt
include/: instance.hpp
include/game/: Manager.hpp  Sprites.hpp
src/: instance.cpp  main.cpp
src/game/: Manager.cpp
